--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,20 +1,21 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
-
+    compileSdkVersion 22
+    buildToolsVersion '22.0.1'
     defaultConfig {
         applicationId "name.pssst.app"
         minSdkVersion 17
-        targetSdkVersion 21
+        targetSdkVersion 22
         versionCode 1
-        versionName "0.2.38"
+        versionName "0.2.42"
     }
     buildTypes {
         release {
             minifyEnabled false
         }
+    }
+    productFlavors {
     }
 }
 
